#7 [ui] 기본 버튼에 패딩 제거

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,9 @@
         <item name="colorOnSurface">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?android:colorBackground</item>
+        
+        <!-- etc -->
+        <item name="android:buttonStyle">@style/Widget.Carrot.Button</item>
+
     </style>
 </resources>
