--- a/app/src/main/res/drawable/ic_sale_middle_list.xml
+++ b/app/src/main/res/drawable/ic_sale_middle_list.xml
@@ -5,11 +5,11 @@
     android:viewportHeight="13">
   <path
       android:pathData="M1.5,1.5m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"
-      android:fillColor="#878B93"/>
+      android:fillColor="#ffffff"/>
   <path
       android:pathData="M1.5,6.5m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"
-      android:fillColor="#878B93"/>
+      android:fillColor="#ffffff"/>
   <path
       android:pathData="M1.5,11.5m-1.5,0a1.5,1.5 0,1 1,3 0a1.5,1.5 0,1 1,-3 0"
-      android:fillColor="#878B93"/>
+      android:fillColor="#ffffff"/>
 </vector>
