--- a/app/src/main/res/layout/activity_sale.xml
+++ b/app/src/main/res/layout/activity_sale.xml
@@ -505,6 +505,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_sale_bottombar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -579,6 +580,7 @@
             app:layout_constraintTop_toTopOf="@id/tv_like_price" />
 
         <Button
+            android:id="@+id/btn_sale_chatbtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
