--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -221,7 +221,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_chat_bottom_app_bar_input"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="9dp"
             android:layout_marginEnd="9dp"
@@ -242,6 +242,7 @@
                 android:layout_marginBottom="6dp"
                 android:background="@null"
                 android:hint="메시지 보내기"
+                android:inputType="textMultiLine"
                 android:textAppearance="@style/TextAppearance.Carrot.Body2"
                 android:textColor="@color/black"
                 android:textColorHint="@color/gray_3"
