--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -192,11 +192,14 @@
         android:id="@+id/rv_chat_chatting"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginEnd="15dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/layout_chat_bottom_app_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_chat_extended_app_bar" />
+        app:layout_constraintTop_toBottomOf="@+id/layout_chat_extended_app_bar"
+        tools:listitem="@layout/item_chat_right" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_chat_bottom_app_bar"
