#14 [ui] chat item 상하단 padding 및 margin 수정

--- a/app/src/main/res/layout/item_chat_right.xml
+++ b/app/src/main/res/layout/item_chat_right.xml
@@ -27,8 +27,7 @@
         android:layout_marginBottom="3dp"
         android:background="@drawable/shape_orange_fill_20_rect"
         android:paddingHorizontal="15dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="6dp"
+        android:paddingVertical="10dp"
         android:textAppearance="@style/TextAppearance.Carrot.Body5"
         android:textColor="@color/white"
         app:layout_constrainedWidth="true"
