--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -10,7 +10,6 @@
         android:id="@+id/iv_chat_left_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
         android:src="@drawable/ic_chat_profile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +22,7 @@
         android:layout_marginBottom="3dp"
         android:background="@drawable/shape_gray_1_fill_20_rect"
         android:paddingHorizontal="15dp"
-        android:paddingTop="12dp"
+        android:paddingVertical="10dp"
         android:paddingBottom="7dp"
         android:textAppearance="@style/TextAppearance.Carrot.Body5"
         app:layout_constrainedWidth="true"
