--- a/app/src/main/res/layout/item_chat_right.xml
+++ b/app/src/main/res/layout/item_chat_right.xml
@@ -13,7 +13,7 @@
         android:layout_marginEnd="3dp"
         android:textAppearance="@style/TextAppearance.Carrot.Detail2"
         android:textColor="@color/gray_3"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/layout_chat_right_announcement"
         app:layout_constraintEnd_toStartOf="@+id/tv_chat_right_text"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -31,9 +31,56 @@
         android:textAppearance="@style/TextAppearance.Carrot.Body5"
         android:textColor="@color/white"
         app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/layout_chat_right_announcement"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_chat_right_time"
         tools:text="45분까지 광흥창역 1번출구로 갈게요!" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_chat_right_announcement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="7dp"
+        android:paddingBottom="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_chat_right_announcement_background"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape_light_skyblue_11_rect"
+            android:paddingHorizontal="20dp"
+            android:paddingBottom="17dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/tv_item_chat_right_announcement_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="19dp"
+                android:text="@string/item_chat_announcement_title"
+                android:textAppearance="@style/TextAppearance.Carrot.Body3"
+                android:textColor="@color/blue"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_item_chat_right_announcement_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.Carrot.Body5"
+                android:textColor="@color/blue"
+                app:layout_constraintStart_toStartOf="@+id/tv_item_chat_right_announcement_title"
+                app:layout_constraintTop_toTopOf="@+id/tv_item_chat_right_announcement_title"
+                tools:text="        마포아씨님과 거래 예약을 했어요. 당근페이에 가입하면 간편하게 송금할 수 있어요." />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
