--- a/app/src/main/res/layout/item_userid.xml
+++ b/app/src/main/res/layout/item_userid.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
 
@@ -29,6 +29,7 @@
         tools:text="스타벅스 써머콘페티 워터..." />
 
     <TextView
+        android:id="@+id/tv_userid_price"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
