--- a/app/src/main/res/layout/activity_sale.xml
+++ b/app/src/main/res/layout/activity_sale.xml
@@ -73,10 +73,10 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:scaleType="centerCrop"
+                    android:src="@drawable/ic_sale_exmpic3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:src="@drawable/ic_sale_exmpic3" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/iv_saleid_userimg"
@@ -97,7 +97,7 @@
                     android:textAppearance="@style/TextAppearance.Carrot.Body1"
                     app:layout_constraintStart_toEndOf="@+id/iv_saleid_userimg"
                     app:layout_constraintTop_toBottomOf="@+id/iv_saleid_saleimg"
-                    android:text="마포아씨" />
+                    tools:text="마포아씨" />
 
                 <TextView
                     android:id="@+id/tv_saleid_userposition"
@@ -108,7 +108,7 @@
                     android:textColor="@color/gray_5"
                     app:layout_constraintStart_toEndOf="@+id/iv_saleid_userimg"
                     app:layout_constraintTop_toBottomOf="@+id/tv_saleid_username"
-                    android:text="서강동" />
+                    tools:text="서강동" />
 
                 <TextView
                     android:id="@+id/tv_saleid_temperature"
@@ -117,11 +117,11 @@
                     android:layout_marginStart="186dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="16dp"
+                    android:text="40.4°C"
                     android:textAppearance="@style/TextAppearance.Carrot.Number3"
                     android:textColor="@color/green"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/iv_saleid_saleimg"
-                    android:text="40.4°C" />
+                    app:layout_constraintTop_toBottomOf="@+id/iv_saleid_saleimg" />
 
                 <ProgressBar
                     android:id="@+id/pb_saleid_progressbar"
@@ -131,16 +131,15 @@
                     android:layout_marginStart="183dp"
                     android:layout_marginEnd="16dp"
                     android:max="100"
+                    android:progress="60"
                     android:progressTint="@color/green"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_saleid_temperature"
-                    android:progress="60" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_saleid_temperature" />
 
                 <TextView
                     android:id="@+id/tv_saleid_mannertemtext"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:layout_marginStart="194dp"
                     android:layout_marginEnd="14dp"
                     android:text="매너온도"
                     android:textAppearance="@style/TextAppearance.Carrot.Detail2"
@@ -165,10 +164,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="22dp"
+                    android:text="스타벅스 다이어리 그린 9,000(쿠폰 없음)"
                     android:textAppearance="@style/TextAppearance.Carrot.Title"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/view_saleid_line"
-                    android:text="스타벅스 다이어리 그린 9,000(쿠폰 없음)" />
+                    app:layout_constraintTop_toBottomOf="@+id/view_saleid_line" />
 
                 <TextView
                     android:id="@+id/tv_saleid_category"
@@ -176,23 +175,23 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="10dp"
+                    android:text="여성잡화"
                     android:textAppearance="@style/TextAppearance.Carrot.Body4"
                     android:textColor="@color/gray_4"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_saleid_title"
-                    android:text="여성잡화" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_saleid_title" />
 
                 <TextView
                     android:id="@+id/tv_saleid_time"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="2dp"
+                    android:text="·1분전"
                     android:textAppearance="@style/TextAppearance.Carrot.Body4"
                     android:textColor="@color/gray_4"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_saleid_category"
                     app:layout_constraintStart_toEndOf="@id/tv_saleid_category"
-                    app:layout_constraintTop_toTopOf="@+id/tv_saleid_category"
-                    android:text="·1분전" />
+                    app:layout_constraintTop_toTopOf="@+id/tv_saleid_category" />
 
                 <TextView
                     android:id="@+id/tv_saleid_likesee"
@@ -213,10 +212,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="15dp"
+                    android:text="쿠폰 빼고 드려요\n직거래시 9,000(광흥창역, 광화문역등)\n택배거래시 택배비 발생합니다"
                     android:textAppearance="@style/TextAppearance.Carrot.Body2"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_saleid_likesee"
-                    android:text="쿠폰 빼고 드려요\n직거래시 9,000(광흥창역, 광화문역등)\n택배거래시 택배비 발생합니다" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_saleid_likesee" />
 
                 <TextView
                     android:id="@+id/tv_saleid_report"
@@ -231,7 +230,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/tv_saleid_description" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/layout_advertisement_bluerectangle"
+                    android:id="@+id/layout_sale_ad_bluerectangle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
@@ -304,7 +303,7 @@
                     android:background="@color/gray_1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/layout_advertisement_bluerectangle" />
+                    app:layout_constraintTop_toBottomOf="@id/layout_sale_ad_bluerectangle" />
 
                 <TextView
                     android:id="@+id/tv_advertisement_title"
@@ -322,9 +321,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="14dp"
+                    android:src="@drawable/ic_sale_exmpic"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/tv_advertisement_saletitle"
-                    android:src="@drawable/ic_sale_exmpic" />
+                    app:layout_constraintTop_toTopOf="@+id/tv_advertisement_saletitle" />
 
                 <TextView
                     android:id="@+id/tv_advertisement_saletitle"
@@ -332,19 +331,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="14dp"
                     android:layout_marginTop="12dp"
+                    android:text="2023 스타벅스 다이어리, 플래\n너 프리퀀시"
                     android:textAppearance="@style/TextAppearance.Carrot.Body2"
                     app:layout_constraintStart_toEndOf="@id/iv_advertisement_image"
-                    app:layout_constraintTop_toBottomOf="@id/tv_advertisement_title"
-                    android:text="2023 스타벅스 다이어리, 플래\n너 프리퀀시" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_advertisement_title" />
 
                 <ImageView
                     android:id="@+id/iv_advertisement_threedot"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="14dp"
+                    android:src="@drawable/ic_sale_middle_list"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/tv_advertisement_saletitle"
-                    android:src="@drawable/ic_sale_middle_list" />
+                    app:layout_constraintTop_toTopOf="@+id/tv_advertisement_saletitle" />
 
                 <TextView
                     android:id="@+id/tv_advertisement_adimg"
@@ -367,12 +366,12 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
+                    android:text="도담도담샵"
                     android:textAppearance="@style/TextAppearance.Carrot.Body4"
                     android:textColor="@color/gray_4"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_advertisement_adimg"
                     app:layout_constraintStart_toEndOf="@id/tv_advertisement_adimg"
-                    app:layout_constraintTop_toTopOf="@+id/tv_advertisement_adimg"
-                    android:text="도담도담샵" />
+                    app:layout_constraintTop_toTopOf="@+id/tv_advertisement_adimg" />
 
                 <TextView
                     android:id="@+id/tv_advertisement_price"
@@ -380,10 +379,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="14dp"
                     android:layout_marginTop="5dp"
+                    android:text="24,500원"
                     android:textAppearance="@style/TextAppearance.Carrot.Body3"
                     app:layout_constraintStart_toEndOf="@id/iv_advertisement_image"
-                    app:layout_constraintTop_toBottomOf="@id/tv_advertisement_adimg"
-                    android:text="24,500원" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_advertisement_adimg" />
 
                 <TextView
                     android:id="@+id/tv_advertisement_newsaletext"
@@ -423,24 +422,23 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="20dp"
+                    android:text="마포아씨님의 판매 상품"
                     android:textAppearance="@style/TextAppearance.Carrot.Body1"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/view_advertisement_line2"
-                    android:text="마포아씨님의 판매 상품" />
+                    app:layout_constraintTop_toBottomOf="@id/view_advertisement_line2" />
 
                 <ImageView
                     android:id="@+id/iv_userid_newproduct"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="11dp"
+                    android:src="@drawable/ic_sale_sale_product"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_userid_title"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/tv_userid_title"
-                    android:src="@drawable/ic_sale_sale_product" />
+                    app:layout_constraintTop_toTopOf="@+id/tv_userid_title" />
 
 
                 <androidx.recyclerview.widget.RecyclerView
-                    tools:listitem="@layout/item_userid"
                     android:id="@+id/rv_userid"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -450,7 +448,8 @@
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_userid_title" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_userid_title"
+                    tools:listitem="@layout/item_userid" />
 
                 <View
                     android:id="@+id/view_recommendation_line"
@@ -498,13 +497,13 @@
 
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:paddingBottom="100dp"
                     android:id="@+id/rv_recommendation"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="20dp"
                     android:orientation="vertical"
+                    android:paddingBottom="100dp"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -519,10 +518,10 @@
             android:id="@+id/layout_sale_bottombar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/white">
+            app:layout_constraintStart_toStartOf="parent">
 
             <View
                 android:id="@+id/view_like_line"
@@ -590,18 +589,18 @@
                 app:layout_constraintStart_toEndOf="@id/tv_like_price"
                 app:layout_constraintTop_toTopOf="@id/tv_like_price" />
 
-            <Button
-                android:id="@+id/btn_sale_chatbtn"
-                android:layout_width="0dp"
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
                 android:layout_marginEnd="13dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/ic_sale_chat_btn"
+                android:background="@drawable/shape_image_fill_4_rect"
+                android:backgroundTint="@color/orange"
                 android:paddingHorizontal="14dp"
                 android:paddingVertical="12dp"
                 android:text="채팅하기"
                 android:textAppearance="@style/TextAppearance.Carrot.Body6"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/view_like_line" />
