--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -3,16 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="7dp">
+    android:layout_height="wrap_content">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_chat_left_top_space"
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_chat_left_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_chat_profile"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/layout_chat_left_top_space"
+        app:layout_constraintTop_toBottomOf="@id/layout_chat_left_top_space" />
 
     <TextView
         android:id="@+id/tv_chat_left_text"
@@ -31,6 +36,7 @@
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/iv_chat_left_profile"
+        app:layout_constraintTop_toTopOf="@+id/iv_chat_left_profile"
         tools:text="저 45분은 쫌 어려울거같아요.\n50분 괜찮으실까요?" />
 
     <TextView
@@ -55,40 +61,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_chat_left_announcement_background"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tv_item_chat_left_announcement_content"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/shape_light_skyblue_11_rect"
             android:paddingHorizontal="20dp"
-            android:paddingBottom="17dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:paddingVertical="19dp"
+            android:textAppearance="@style/TextAppearance.Carrot.Body5"
+            android:textColor="@color/blue"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/tv_item_chat_left_announcement_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="19dp"
-                android:text="@string/item_chat_announcement_title"
-                android:textAppearance="@style/TextAppearance.Carrot.Body3"
-                android:textColor="@color/blue"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_item_chat_left_announcement_content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.Carrot.Body5"
-                android:textColor="@color/blue"
-                app:layout_constraintStart_toStartOf="@+id/tv_item_chat_left_announcement_title"
-                app:layout_constraintTop_toTopOf="@+id/tv_item_chat_left_announcement_title"
-                tools:text="        마포아씨님과 거래 예약을 했어요. 당근페이에 가입하면 간편하게 송금할 수 있어요." />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="안내 마포아씨님과 거래 예약을 했어요. 당근페이에 가입하면 간편하게 송금할 수 있어요. 자세히 보기" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
