#14 [ui] 상단 margin layout으로 변경

--- a/app/src/main/res/layout/item_chat_right.xml
+++ b/app/src/main/res/layout/item_chat_right.xml
@@ -3,8 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="7dp">
+    android:layout_height="wrap_content">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_chat_right_top_space"
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_chat_right_time"
@@ -34,6 +39,7 @@
         app:layout_constraintBottom_toTopOf="@id/layout_chat_right_announcement"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_chat_right_time"
+        app:layout_constraintTop_toBottomOf="@id/layout_chat_right_top_space"
         tools:text="45분까지 광흥창역 1번출구로 갈게요!" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
