#5 [ui] 메뉴 아이콘 수정

--- a/app/src/main/res/drawable/ic_navi_home_select.xml
+++ b/app/src/main/res/drawable/ic_navi_home_select.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18dp"
-    android:height="18dp"
-    android:viewportWidth="18"
-    android:viewportHeight="18">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M8.537,0.158L0.221,7.401C0.08,7.523 0,7.7 0,7.886V17.066C0,17.42 0.288,17.708 0.643,17.708H6.358V11.928H6.358V11.928C6.358,10.651 7.393,9.616 8.67,9.616C9.947,9.616 10.982,10.651 10.982,11.928L10.982,11.958V17.708H17.275C17.63,17.708 17.918,17.42 17.918,17.066V7.886C17.918,7.7 17.837,7.523 17.697,7.401L9.381,0.158C9.139,-0.053 8.779,-0.053 8.537,0.158Z"
+      android:pathData="M11.537,3.158L3.221,10.401C3.08,10.523 3,10.7 3,10.886V20.066C3,20.42 3.288,20.708 3.642,20.708H9.358V14.928H9.358V14.928C9.358,13.651 10.393,12.616 11.67,12.616C12.947,12.616 13.982,13.651 13.982,14.928L13.982,14.958V20.708H20.275C20.63,20.708 20.918,20.42 20.918,20.066V10.886C20.918,10.7 20.837,10.523 20.697,10.401L12.381,3.158C12.139,2.947 11.779,2.947 11.537,3.158Z"
       android:fillColor="#212123"
       android:fillType="evenOdd"/>
 </vector>
