--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,27 +8,27 @@
     <fragment
         android:id="@+id/home_fragment"
         android:name="com.sumin.android.carrot_aos.presentation.home.HomeFragment"
-        android:label="fragment_gallery"
+        android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/town_fragment"
         android:name="com.sumin.android.carrot_aos.presentation.home.TownFragment"
-        android:label="fragment_my_page"
+        android:label="fragment_town"
         tools:layout="@layout/fragment_town" />
     <fragment
         android:id="@+id/nearby_fragment"
         android:name="com.sumin.android.carrot_aos.presentation.home.NearbyFragment"
-        android:label="fragment_follower"
+        android:label="fragment_nearby"
         tools:layout="@layout/fragment_nearby" />
     <fragment
         android:id="@+id/chat_fragment"
         android:name="com.sumin.android.carrot_aos.presentation.home.ChatFragment"
-        android:label="fragment_search"
+        android:label="fragment_chat"
         tools:layout="@layout/fragment_chat" />
     <fragment
         android:id="@+id/my_info_fragment"
         android:name="com.sumin.android.carrot_aos.presentation.home.MyInfoFragment"
-        android:label="fragment_search"
+        android:label="fragment_my_info"
         tools:layout="@layout/fragment_my_info" />
 
 </navigation>
