--- a/app/src/main/res/layout/item_review_card.xml
+++ b/app/src/main/res/layout/item_review_card.xml
@@ -6,15 +6,29 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="42dp">
 
+    <TextView
+        android:id="@+id/tv_item_review_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:textAppearance="@style/TextAppearance.Carrot.Title"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="마포아씨님에게\n따뜻한 후기를 보냈어요." />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_item_review_card"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/shape_mint_fill_20_rect"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_item_review_title">
 
         <ImageView
             android:id="@+id/iv_item_review_card_img"
