--- a/app/src/main/res/layout/item_review_button.xml
+++ b/app/src/main/res/layout/item_review_button.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="40dp"
     android:layout_marginBottom="12dp">
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_item_review_button_my_manner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
@@ -16,13 +16,13 @@
         android:minHeight="0dp"
         android:paddingTop="10dp"
         android:paddingBottom="7dp"
+        android:text="@string/item_review_button_my_manner"
         android:textAppearance="@style/TextAppearance.Carrot.Title"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="내 매너 평가 보기" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
