--- a/app/src/main/res/layout/item_review_card.xml
+++ b/app/src/main/res/layout/item_review_card.xml
@@ -41,6 +41,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_item_review_card_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="17dp"
