#17 [fix] 거래 후기 보기 버튼 drawblepadding 설정

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -167,8 +167,7 @@
                 android:layout_marginTop="12dp"
                 android:background="@drawable/shape_gray_2_stroke_3_rect"
                 android:drawableLeft="@drawable/ic_chat_pen"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
+                android:drawablePadding="7dp"
                 android:paddingStart="12dp"
                 android:paddingTop="9dp"
                 android:paddingEnd="11dp"
