--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -186,6 +186,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            tools:listitem="@layout/item_home"
             app:layout_constraintTop_toBottomOf="@id/layout_home_ad" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
