--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -241,7 +241,7 @@
                     android:layout_marginEnd="10dp"
                     android:background="@null"
                     android:hint="메시지 보내기"
-                    android:inputType="textMultiLine"
+                    android:inputType="text"
                     android:text="@={viewModel.chatInput}"
                     android:textAppearance="@style/TextAppearance.Carrot.Body2"
                     android:textColor="@color/black"
